2010-06-16  Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix error when a target raises an event failed.

2010-06-11  Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix failover with more than one failnode.

2010-05-21  Stephane Thiell  <stephane.thiell@cea.fr>
	* Release: 0.907

2010-05-21 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Hostname resolution improvements (fix ticket #60 and #61).

2010-05-19  Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Better error handling with unreachable nodes when installing(ticket #58).

2010-05-18  Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Primary version of failover support (ticket #18).

2010-05-05  Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Allow filesystem with no MDT and OST (ticket #39).

2010-04-09  Stephane Thiell  <stephane.thiell@cea.fr>
	* Release: 0.906

2010-04-09  Jerome Fereyre  <jerome.fereyre@bull.net>
	* Add fsck command (ticket #34).

2010-04-07  Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Add router management (ticket #15).

2010-04-07  Jerome Fereyre  <jerome.fereyre@bull.net>
	* Add support of additional command line options (-o). Initialy for 
	mount, and generalized to other commands.

2010-03-31  Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix regression for shine return code (ticket #59).

2010-03-29  Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Component code improvement fixes ticket #52.
	* Fix timeout issues when installing (ticket #47).

2010-03-02  Aurelien Degremont  <aurelien.degremont@cea.fr>
	* 'shine remove' now clean configuration on client nodes also (ticket #51).

2010-02-17  Stephane Thiell  <stephane.thiell@cea.fr>
	* Release: 0.905
	* Added man page for shine(1).

2010-02-15  Stephane Thiell  <stephane.thiell@cea.fr>
	* Fix AsciiTable columns adjustment issue.

2010-01-27  Stephane Thiell  <stephane.thiell@cea.fr>
	* Fix mount_path optional parameter in client configuration line.
